# chess

./: .gitignore  CMakeLists.txt  README.md  chess.pgn  chess_lichess.pgn  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
projects/interactive_2d/chess/chess_frontend/: .eslintrc.json  dependencies.json  jest.config.ts  next.config.js  project.json  tsconfig.json
src/: deps.cpp  main.cpp
src/modules/App/: App.h  AppImpl.cpp
src/modules/Board/: Board.h  BoardImpl.cpp
src/modules/Board/BoardBuilder/: BoardBuilder.h  BoardBuilderImpl.cpp
src/modules/Board/BoardBuilder/DrawRectParams/: DrawRectParams.cpp  DrawRectParams.h
src/modules/Common/Collision/: Collision.h  CollisionImpl.cpp
src/modules/Common/Config/: Config.cpp  Config.h
src/modules/Common/GameState/: GameState.h  GameStateImpl.cpp
src/modules/Common/InstanceOf/: InstanceOf.cpp  InstanceOf.h
src/modules/Common/Kind/: Kind.h
src/modules/Common/PieceColor/: PieceColor.h
src/modules/Common/PiecesDict/: PiecesDict.h
src/modules/GameController/: GameController.h  GameControllerImpl.cpp
src/modules/GameController/PossibleMove/: PossibleMove.h  PossibleMoveImpl.cpp
src/modules/GameController/PossibleMove/PossibleMoveParams/: PossibleMoveParams.cpp  PossibleMoveParams.h
src/modules/Pieces/: Piece.h  PieceImpl.cpp
src/modules/Pieces/Kinds/Bishop/: Bishop.cpp  Bishop.h
src/modules/Pieces/Kinds/King/: King.cpp  King.h
src/modules/PiecesLoader/: PiecesLoader.h  PiecesLoaderImpl.cpp
src/modules/Stockfish/: Stockfish.cpp  Stockfish.h
(+26 files in other folders)
